# Virtual-Tailoring-Project

./: README.md  index.html  pyproject.toml  requirements.txt  vercel.json  virtual_tailor.py
Virtual-Tailoring-Project/: pyproject.toml  requirements.txt
api/: measure.py
